[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Top.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Bottom.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Side.gd" type="Script" id=6]
[ext_resource path="res://Sounds/BounceYoFrankie.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Thrust Sequence.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 496, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 268 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 496, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 300 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.25
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 5 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( -1000, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 8.0
scale_random = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rect" type="ColorRect" parent="Top"]
margin_right = 992.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 1 )

[node name="TopCollision" type="CollisionShape2D" parent="Top"]
position = Vector2( 496, 16 )
shape = SubResource( 1 )

[node name="Side" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rect" type="ColorRect" parent="Side"]
margin_left = 992.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 568.0
color = Color( 0, 0, 0, 1 )

[node name="SideCollision" type="CollisionShape2D" parent="Side"]
position = Vector2( 1008, 300 )
shape = SubResource( 2 )

[node name="Bottom" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rect" type="ColorRect" parent="Bottom"]
margin_top = 568.0
margin_right = 992.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 496, 584 )
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 296 )
collision_mask = 6

[node name="OutBounds" type="Area2D" parent="."]
position = Vector2( 0, 296 )

[node name="OutCollision" type="CollisionShape2D" parent="OutBounds"]
position = Vector2( 15, 4 )
shape = SubResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 68, 292 )

[node name="Particles2D" type="Particles2D" parent="Ball"]
show_behind_parent = true
lifetime = 0.5
randomness = 0.5
process_material = SubResource( 5 )

[node name="LevelLabel" type="Label" parent="."]
margin_left = 126.0
margin_top = 8.0
margin_right = 190.0
margin_bottom = 24.0
text = "Level: 1"
align = 1
valign = 1

[node name="TimerLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 24.0
text = "Time: 0"
align = 1
valign = 1

[node name="StartPositions" type="Node" parent="."]

[node name="StartPos1" type="Position2D" parent="StartPositions"]
position = Vector2( 64, 296 )

[node name="StartPos2" type="Position2D" parent="StartPositions"]
position = Vector2( 64, 306 )

[node name="StartPos3" type="Position2D" parent="StartPositions"]
position = Vector2( 54, 296 )

[node name="StartPos4" type="Position2D" parent="StartPositions"]
position = Vector2( 74, 296 )

[node name="StartPos5" type="Position2D" parent="StartPositions"]
position = Vector2( 64, 286 )

[node name="ColorTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="BounceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 0.5

[node name="MusicAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -20.0
pitch_scale = 0.8
autoplay = true

[node name="PauseMenu" type="CenterContainer" parent="."]
pause_mode = 2
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
margin_left = 384.0
margin_top = 172.0
margin_right = 640.0
margin_bottom = 428.0
rect_min_size = Vector2( 256, 256 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_left = 448.0
margin_top = 236.0
margin_right = 576.0
margin_bottom = 364.0
custom_constants/separation = 16

[node name="PlayButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
text = "Play"

[node name="MusicButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 128, 32 )
text = "Music: On"

[node name="SoundFxButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 32 )
text = "Sound Fx: On"

[connection signal="body_entered" from="OutBounds" to="." method="_on_OutBounds_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/SoundFxButton" to="." method="_on_SoundFxButton_pressed"]
